# COP2080.01I-T

./: Data_Types.py  GradeQuery.py  L03_salary_average.py  README.md  act_venv.txt  print_test.py  pyproject.toml
HW2/: GradeQuery.py
HW3/: grade_compute.py  letter_grade_avg.py
HW4/: main.py  menu.py  run_bash_cmd_function.py
L02/: Data_Types.py
L03/: L03_average_exam.py
L04/: add_mult.py  tax.function.py  tax.no_function.py
L05/: L05_Participation.py
L06/: L06_Participation.py
L07/: counter.py  counter_demo.py
L09/: L09_Participation.py
L10/: L10_Participation.py  question_demo2.py
L11/: L11_Participation.py
L12/: L12_Participation.py
L12/source/: use_strip.py
L13/: L13_Participation.py
L14/: L14_Participation.py
L19/: app.py  main.py
L21/: main.py  numpy_df_streamlit.py
L22/: poke_api_basic.py
L23/web_st_ai_chat_class/: .env  README.md  pyproject.toml
L23/web_st_ai_chat_class/src/chat/: app_simple.py  gemini_test.py  langchain_message.py  requirements.txt  run.sh
L23/web_st_ai_chat_class/src/web/: app.py  run.sh
L23/web_st_ai_chat_class/src/web/static/css/: style.css
L23/web_st_ai_chat_class/src/web/templates/: index.html
