[project]
name = "web-st-ai-chat"
version = "0.1.0"
description = "protoype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.0.0",
    "google-generativeai>=0.7.0",
    "langchain>=0.2.0",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=1.0.0",
    "streamlit>=1.35.0",
]
